Updated French translations by Stephane Roy <sroy@j2n.net>.
(Old svn revision: 20161)

--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-26 14:57+0100\n"
-"PO-Revision-Date: 2006-02-14 14:12+0100\n"
+"PO-Revision-Date: 2006-03-02 10:42+0100\n"
 "Last-Translator: Stephane Roy <sroy@j2n.net>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -126,7 +126,7 @@ msgstr "Nombre de colonnes à afficher"
 
 #: ../exo/exo-icon-view.c:664
 msgid "Enable Search"
-msgstr ""
+msgstr "Activer la recherche"
 
 #: ../exo/exo-icon-view.c:665
 msgid "View allows user to search through columns interactively"
@@ -190,9 +190,8 @@ msgid "Space which is inserted between grid rows"
 msgstr "Espace qui est inséré entre les lignes de la grille"
 
 #: ../exo/exo-icon-view.c:808
-#, fuzzy
 msgid "Search Column"
-msgstr "Colonne balise"
+msgstr "Colonne recherche"
 
 #: ../exo/exo-icon-view.c:809
 msgid "Model column to search through when searching through item"
@@ -208,11 +207,12 @@ msgstr "Le mode de sélection"
 
 #: ../exo/exo-icon-view.c:839 ../exo/exo-tree-view.c:163
 msgid "Single Click"
-msgstr ""
+msgstr "Simple clic"
 
 #: ../exo/exo-icon-view.c:840 ../exo/exo-tree-view.c:164
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr ""
+"Si les éléments dans la vue peuvent être activé ou non avec un simple clic"
 
 #: ../exo/exo-icon-view.c:855
 msgid "Spacing"
@@ -287,19 +287,19 @@ msgid "Customize Toolbar..."
 msgstr "Personnaliser une barre d'outils..."
 
 #: ../exo/exo-url.c:283
-#, fuzzy, c-format
+#, c-format
 msgid "Unable to open \"%s\""
-msgstr "Impossible d'ouvrir `%s'"
+msgstr "Impossible d'ouvrir \"%s\""
 
 #: ../exo/exo-url.c:305
-#, fuzzy, c-format
+#, c-format
 msgid "The URL \"%s\" is not supported"
-msgstr "L'URL `%s' n'est pas supportée"
+msgstr "L'URL \"%s\" n'est pas supportée"
 
 #: ../exo/exo-url.c:377
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open \"%s\"."
-msgstr "Échec à l'ouverture de `%s'."
+msgstr "Échec à l'ouverture de \"%s\"."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
@@ -468,9 +468,8 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:296
 #: ../exo-helper/exo-helper-launcher-dialog.c:260
-#, fuzzy
 msgid "Failed to open the documentation browser."
-msgstr "Échec pour affecter le Navigateur Web par défaut"
+msgstr "Échec à l'ouverture le navigateur de la documentation."
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
@@ -747,11 +746,11 @@ msgstr ""
 "\n"
 
 #: ../exo-open/main.c:121
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr "Échec au lancement de l'application favorite pour la catégorie `%s'."
+msgstr "Échec au lancement de l'application favorite pour la catégorie \"%s\"."
 
 #: ../exo-open/main.c:144
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open URL \"%s\"."
-msgstr "Échec à l'ouverture de l'URL `%s'."
+msgstr "Échec à l'ouverture de l'URL \"%s\"."
