--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-04  Daichi Kawahata <daichi@xfce.org>
+
+	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
+	  ja.po, libexo-0.3.pot, pt_BR.po: Updated.
+
 2006-03-03  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Updated Greek translations
