Updated German translations by Fabian Nowak <timystery@arcor.de>.
(Old svn revision: 20204)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-03-04  Daichi Kawahata <daichi@xfce.org>
 
+	* de.po: Updated German translations by Fabian Nowak
+	  <timystery@arcor.de>.
 	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
 	  ja.po, libexo-0.3.pot, pt_BR.po: Updated.
 
