--- a/po/de.po
+++ b/po/de.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-04 12:21+0900\n"
-"PO-Revision-Date:  2006-02-24 22:30+0100\n"
-"Last-Translator: Benedikt Meurer <benny@xfce.org>\n"
+"PO-Revision-Date:  2006-03-03 12:19+0100\n"
+"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,7 +26,7 @@ msgid ""
 "The preferred place to ellipsize the string, if the cell renderer does not "
 "have enough room to display the entire string, if at all"
 msgstr ""
-"Der bvorzugte Ort um einen String abzukürzen, falls der Renderer für die "
+"Der bevorzugte Ort, um einen String abzukürzen, falls der Renderer für die "
 "Zelle nicht genug Platz hat, den ganzen String anzuzeigen, falls überhaupt"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:163
@@ -42,8 +42,9 @@ msgid ""
 "The preferred place to ellipsize the string, if the label does not have "
 "enough room to display the entire string, if at all"
 msgstr ""
-"Der bvorzugte Ort um einen String abzukürzen, falls das Label nicht genug "
-"Platz hat, den ganzen String anzuzeigen, falls überhaupt"
+"Der bevorzugte Ort, um einen String abzukürzen, falls für die Beschriftung "
+"nicht genug Platz vorhanden ist, den ganzen String anzuzeigen, falls "
+"überhaupt"
 
 #: ../exo/exo-icon-bar.c:259 ../exo/exo-icon-view.c:745
 msgid "Orientation"
@@ -67,7 +68,7 @@ msgstr "Textspalte"
 
 #: ../exo/exo-icon-bar.c:293 ../exo/exo-icon-view.c:873
 msgid "Model column used to retrieve the text from"
-msgstr "Spale für das Model, von der der Text geholt werden soll"
+msgstr "Spalte für das Model, von der der Text geholt werden soll"
 
 #: ../exo/exo-icon-bar.c:305
 msgid "Icon Bar Model"
@@ -115,7 +116,7 @@ msgstr "Spaltenabstand"
 
 #: ../exo/exo-icon-view.c:634
 msgid "Space which is inserted between grid column"
-msgstr "Platz, der zwischen Gittespalten eingefügt wird"
+msgstr "Platz, der zwischen Gitterspalten eingefügt wird"
 
 #: ../exo/exo-icon-view.c:650
 msgid "Number of columns"
@@ -157,7 +158,7 @@ msgstr "Auswahlspalte"
 msgid "Model column used to retrieve the text if using Pango markup"
 msgstr ""
 "Modellspalte, anhand derer Text geholt wird, falls die Auszeichungssprache "
-"Pango verwendet wird"
+"\"Pango\" verwendet wird"
 
 #: ../exo/exo-icon-view.c:731
 msgid "Icon View Model"
@@ -171,7 +172,7 @@ msgstr "Das Modell für die Symbolansicht"
 msgid ""
 "How the text and icon of each item are positioned relative to each other"
 msgstr ""
-"Wie der Text und das Symbol jedes Elements relativ zueinandner positioniert "
+"Wie der Text und das Symbol jedes Elements relativ zueinandner angeordnet "
 "werden"
 
 #: ../exo/exo-icon-view.c:778
@@ -541,7 +542,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser.c:512
 msgid "Browse the file system to choose a custom command."
-msgstr "Daas Dateisystem durchsuchen, um einen eigenen Befehl zu wählen."
+msgstr "Das Dateisystem durchsuchen, um einen eigenen Befehl zu wählen."
 
 #: ../exo-helper/exo-helper-chooser.c:687
 msgid "_Other..."
@@ -561,7 +562,7 @@ msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
-"Wählen Sie Ihren bevorzugten Web Browser\n"
+"Wählen Sie Ihren bevorzugten Webbrowser\n"
 "aus und klicken Sie auf OK um fortzufahren."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:321
@@ -586,7 +587,7 @@ msgstr "Kein Kommando angegeben"
 
 #: ../exo-helper/exo-helper.c:675
 msgid "Failed to open helpers.rc for writing"
-msgstr "Konnte helpers.rc nicht zum Schreiben öffnen"
+msgstr "Konnte »helpers.rc« nicht zum Schreiben öffnen"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:40
 msgid "Failed to launch exo-preferred-applications"
