2006-03-04	Benedikt Meurer <benny@xfce.org>
	* po/de.po: Fix error.




(Old svn revision: 20213)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-04	Benedikt Meurer <benny@xfce.org>
+
+	* po/de.po: Fix error.
+
 2006-03-02	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in, exo/exo-gdk-pixbuf-extensions.{c,h},
