--- a/po/de.po
+++ b/po/de.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-04 12:21+0900\n"
-"PO-Revision-Date:  2006-03-03 12:19+0100\n"
-"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
+"PO-Revision-Date:  2006-03-04 13:52+0100\n"
+"Last-Translator: Benedikt Meurer <benny@xfce.org>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -158,7 +158,7 @@ msgstr "Auswahlspalte"
 msgid "Model column used to retrieve the text if using Pango markup"
 msgstr ""
 "Modellspalte, anhand derer Text geholt wird, falls die Auszeichungssprache "
-"\"Pango\" verwendet wird"
+"von Pango verwendet wird"
 
 #: ../exo/exo-icon-view.c:731
 msgid "Icon View Model"
