2006-03-05	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Bump version to 0.3.1.4alpha2.
	* configure.in.in: Bump soname.
	* NEWS: Add news items.




(Old svn revision: 20234)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-03-05	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Bump version to 0.3.1.4alpha2.
+	* configure.in.in: Bump soname.
+	* NEWS: Add news items.
+
 2006-03-04	Benedikt Meurer <benny@xfce.org>
 
 	* po/de.po: Fix error.
