--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0.3.1.3svn
+0.3.1.4svn
 ==========
 - Imported the "Xfce Preferred Applications" framework, which allows users to
   select their preferred applications (i.e. web browser, mail reader, terminal
@@ -7,6 +7,12 @@
   web browser.
 - Updated the ExoIconView class to support an API compatible to the GtkIconView
   in Gtk+ 2.8, and improve the performance of the icon view.
+- Added single click navigation support to ExoIconView.
+- Added a new widget ExoTreeView, which extends GtkTreeView with single click
+  navigation.
+- Added a new widget ExoWrapTable, which layouts its child widgets in an
+  automatically wrapped table. For example, this is used for the emblem
+  chooser in Thunar.
 - Added a new utility exo-csource, which can generate C source code from
   arbitrary data.
 - Added various new convenience functions to make dealing with strings,
@@ -17,8 +23,9 @@
   question.
 - Support three different levels of debugging support (yes/minimum/no).
 - New translations: Pau Rul·lan Ferragut (ca), Stavros Giannouris (el),
-                    Patricio Carr (es), Jari RahkonenS (fi), tephane Roy
-		    (fr), Daichi Kawahata (ja), Joao Pedrosa (pt_BR)
+                    Patricio Carr (es), Piarres Beobide (eu), Jari Rahkonen
+                    (fi), Stephane Roy (fr), Daichi Kawahata (ja), Joao
+                    Pedrosa (pt_BR)
 
 
 0.3.0
