--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-03-05	Benedikt Meurer <benny@xfce.org>
 
+	* configure.in.in: Bump version to 0.3.1.5svn.
+
+2006-03-05	Benedikt Meurer <benny@xfce.org>
+
 	* configure.in.in: Bump version to 0.3.1.4alpha2.
 	* configure.in.in: Bump soname.
 	* NEWS: Add news items.
