Basque translation update
(Old svn revision: 20261)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-06  Piarres Beobide <pi@beobide.net>
+
+	* eu.po: Basque translation update
+
 2006-03-04  Daichi Kawahata <daichi@xfce.org>
 
 	* de.po: Updated German translations by Fabian Nowak
