--- a/po/eu.po
+++ b/po/eu.po
@@ -6,7 +6,7 @@
 # Piarres Beobide <pi@beobide.net>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: eu\n"
+"Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-04 12:21+0900\n"
 "PO-Revision-Date: 2006-03-06 21:32+0100\n"
@@ -132,7 +132,9 @@ msgstr "Bailketa Galitu"
 
 #: ../exo/exo-icon-view.c:666
 msgid "View allows user to search through columns interactively"
-msgstr "Ikuspegiak erabiltzaileari zutabetan interaktiboki bilatzeko aukera ematen dio"
+msgstr ""
+"Ikuspegiak erabiltzaileari zutabetan interaktiboki bilatzeko aukera ematen "
+"dio"
 
 #: ../exo/exo-icon-view.c:683
 msgid "Width for each item"
@@ -169,7 +171,8 @@ msgid "The model for the icon view"
 msgstr "Ikono ikuspegiaren modeloa"
 
 #: ../exo/exo-icon-view.c:746
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "Elementu bakoitzaren testu eta ikonoaren kokapena bestearekiko"
 
 #: ../exo/exo-icon-view.c:778
@@ -666,11 +669,14 @@ msgstr "       exo-open --launch MOTA [PARAMETROAK...]"
 
 #: ../exo-open/main.c:46
 msgid "  -h, --help                          Print this help message and exit"
-msgstr "  -h, --help                          Laguntza testua hau bistarazi eta irten"
+msgstr ""
+"  -h, --help                          Laguntza testua hau bistarazi eta irten"
 
 #: ../exo-open/main.c:47
-msgid "  -v, --version                       Print version information and exit"
-msgstr "  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
+msgid ""
+"  -v, --version                       Print version information and exit"
+msgstr ""
+"  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -742,4 +748,3 @@ msgstr "Huts \"%s\" ataleko hobetsiriko aplikazioa irekitzerakoan."
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Huts \"%s\" URL-a irekitzerakoan."
-
