--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-13  Daichi Kawahata <daichi@xfce.org>
+
+	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
+	  ja.po, pt_BR.po: Bump.
+
 2006-03-06  Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Basque translation update
