--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-16	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Use a simple 
+	  optimization here.
+
 2006-03-11	Benedikt Meurer <benny@xfce.org>
 
 	* exo-helper/helpers/sylpheed-claws.desktop.in,
