2006-03-16	Benedikt Meurer <benny@xfce.org>
	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Allow to
	  alter selection using Ctrl+button/Shift+button.




(Old svn revision: 20454)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-03-16	Benedikt Meurer <benny@xfce.org>
 
+	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Allow to
+	  alter selection using Ctrl+button/Shift+button.
+
+2006-03-16	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Use a simple 
 	  optimization here.
 
