--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-18  Daichi Kawahata <daichi@xfce.org>
+
+	* LINGUAS, ru.po: Added Russian translations by Andrey Fedoseev
+	  <andrey.fedoseev@gmail.com>.
+
 2006-03-13  Daichi Kawahata <daichi@xfce.org>
 
 	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
@@ -6,6 +11,16 @@
 2006-03-06  Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Basque translation update
+
+2006-03-06  Benedikt Meurer <benny@xfce.org>
+
+	* LINGUAS: Read the set of available languages from LINGUAS and
+	  substitute them when autogen.sh is run. This way we can
+	  continue to use glib-gettext.
+
+2006-03-04  Benedikt Meurer <benny@xfce.org>
+
+	* de.po: Fix error.
 
 2006-03-04  Daichi Kawahata <daichi@xfce.org>
 
