2006-03-18	Benedikt Meurer <benny@xfce.org>
	* THANKS: Add translator credits for Andrey Fedoseev
	  <andrey.fedoseev@gmail.com>.




(Old svn revision: 20481)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-18	Benedikt Meurer <benny@xfce.org>
+
+	* THANKS: Add translator credits for Andrey Fedoseev
+	  <andrey.fedoseev@gmail.com>.
+
 2006-03-16	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Allow to
