--- a/THANKS
+++ b/THANKS
@@ -40,3 +40,5 @@ Daichi Kawahata <daichik@users.sourceforge.net>
 Joao Pedrosa <joaopedrosa@gmail.com>
  * pt_BR translations
 
+Andrey Fedoseev <andrey.fedoseev@gmail.com>
+ * ru translations
