[i18n] catalan little of work on trunk
(Old svn revision: 20484)

--- a/po/ca.po
+++ b/po/ca.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-04 12:21+0900\n"
-"PO-Revision-Date: 2006-02-17 23:51+0100\n"
+"PO-Revision-Date: 2006-03-18 18:46+0100\n"
 "Last-Translator: Pau Rul.lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
@@ -125,11 +125,11 @@ msgstr "El nombre de columnes a mostrar"
 
 #: ../exo/exo-icon-view.c:665
 msgid "Enable Search"
-msgstr ""
+msgstr "Habilita la búsqueda"
 
 #: ../exo/exo-icon-view.c:666
 msgid "View allows user to search through columns interactively"
-msgstr ""
+msgstr "Vista que permet a l'usuari buscar de manera interactiva mitjançant columnes"
 
 #: ../exo/exo-icon-view.c:683
 msgid "Width for each item"
@@ -192,7 +192,7 @@ msgstr "Columna d'etiquetatge"
 
 #: ../exo/exo-icon-view.c:810
 msgid "Model column to search through when searching through item"
-msgstr ""
+msgstr "Model de columnes per buscar quan es busqui mitjançant elements"
 
 #: ../exo/exo-icon-view.c:824
 msgid "Selection mode"
@@ -204,11 +204,11 @@ msgstr "El mode de selecció"
 
 #: ../exo/exo-icon-view.c:840 ../exo/exo-tree-view.c:155
 msgid "Single Click"
-msgstr ""
+msgstr "Clic senzill"
 
 #: ../exo/exo-icon-view.c:841 ../exo/exo-tree-view.c:156
 msgid "Whether the items in the view can be activated with single clicks"
-msgstr ""
+msgstr "Si els elements de la vista poden ser activats amb un sol clic"
 
 #: ../exo/exo-icon-view.c:856
 msgid "Spacing"
@@ -284,19 +284,19 @@ msgid "Customize Toolbar..."
 msgstr "Personalitza barra d'eines..."
 
 #: ../exo/exo-url.c:283
-#, fuzzy, c-format
+#, c-format
 msgid "Unable to open \"%s\""
-msgstr "No s'ha pogut obrir `%s'"
+msgstr "No s'ha pogut obrir \"%s\""
 
 #: ../exo/exo-url.c:305
-#, fuzzy, c-format
+#, c-format
 msgid "The URL \"%s\" is not supported"
-msgstr "No es suporten URL com `%s'"
+msgstr "No es suporten URL com \"%s\""
 
 #: ../exo/exo-url.c:377
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open \"%s\"."
-msgstr "És impossible obrir `%s'."
+msgstr "És impossible obrir \"%s\"."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
@@ -464,9 +464,8 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:296
 #: ../exo-helper/exo-helper-launcher-dialog.c:260
-#, fuzzy
 msgid "Failed to open the documentation browser."
-msgstr "És impossible definir el navegador web predeterminat"
+msgstr "És impossible obrir el navegador per la documentació"
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
@@ -734,9 +733,9 @@ msgstr ""
 "\n"
 
 #: ../exo-open/main.c:121
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr "És impossible llançar l'aplicació predeferida de la categoria `%s'."
+msgstr "És impossible llançar l'aplicació predeferida de la categoria \"%s\"."
 
 #: ../exo-open/main.c:144
 #, fuzzy, c-format
