[i18n] catalan seems a lot of work but they all are fuzzy
(Old svn revision: 20498)

--- a/po/ca.po
+++ b/po/ca.po
@@ -1,18 +1,21 @@
+# translation of ca.po to Catalan
+# Pau Rul.lan Ferragut <paurullan@bulma.net> 2005, 2006.
+# Pau Rul·lan Ferragut <paurullan@bulma.net>, 2006.
 # Catalan translations for exo package.
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
-# Pau Rul.lan Ferragut <paurullan@bulma.net> 2005, 2006
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.5svn\n"
+"Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-04 12:21+0900\n"
-"PO-Revision-Date: 2006-03-18 18:46+0100\n"
-"Last-Translator: Pau Rul.lan Ferragut <paurullan@bulma.net>\n"
-"Language-Team: catalan\n"
+"PO-Revision-Date: 2006-03-19 17:33+0100\n"
+"Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
+"Language-Team: Catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:152
 #: ../exo/exo-ellipsized-label.c:122
@@ -153,8 +156,7 @@ msgstr "Columna d'etiquetatge"
 
 #: ../exo/exo-icon-view.c:717
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr ""
-"Columna del model d'on obtenir el text si es fa servir el marcatge Pango"
+msgstr "Columna del model d'on obtenir el text si es fa servir el marcatge Pango"
 
 #: ../exo/exo-icon-view.c:731
 msgid "Icon View Model"
@@ -165,8 +167,7 @@ msgid "The model for the icon view"
 msgstr "El model per la vista d'icones"
 
 #: ../exo/exo-icon-view.c:746
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
+msgid "How the text and icon of each item are positioned relative to each other"
 msgstr "Posicionament relatiu entre el text i la icona de cada element"
 
 #: ../exo/exo-icon-view.c:778
@@ -188,7 +189,7 @@ msgstr "L'espai inserit entre les files d'una graella"
 #: ../exo/exo-icon-view.c:809
 #, fuzzy
 msgid "Search Column"
-msgstr "Columna d'etiquetatge"
+msgstr "Cerca columna"
 
 #: ../exo/exo-icon-view.c:810
 msgid "Model column to search through when searching through item"
@@ -669,8 +670,7 @@ msgid "  -h, --help                          Print this help message and exit"
 msgstr "  -h, --help                        Mostra aquest missatge i surt"
 
 #: ../exo-open/main.c:47
-msgid ""
-"  -v, --version                       Print version information and exit"
+msgid "  -v, --version                       Print version information and exit"
 msgstr "  -v, --version                 Mostra la versió i surt"
 
 #: ../exo-open/main.c:49
@@ -740,4 +740,5 @@ msgstr "És impossible llançar l'aplicació predeferida de la categoria \"%s\".
 #: ../exo-open/main.c:144
 #, fuzzy, c-format
 msgid "Failed to open URL \"%s\"."
-msgstr "És impossible obrir l'URL `%s'."
+msgstr "Fallit a  obre URL."
+
