--- a/po/ca.po
+++ b/po/ca.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-03-04 12:21+0900\n"
+"POT-Creation-Date: 2006-03-25 08:18+0900\n"
 "PO-Revision-Date: 2006-03-19 17:33+0100\n"
 "Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: Catalan\n"
@@ -132,7 +132,8 @@ msgstr "Habilita la búsqueda"
 
 #: ../exo/exo-icon-view.c:666
 msgid "View allows user to search through columns interactively"
-msgstr "Vista que permet a l'usuari buscar de manera interactiva mitjançant columnes"
+msgstr ""
+"Vista que permet a l'usuari buscar de manera interactiva mitjançant columnes"
 
 #: ../exo/exo-icon-view.c:683
 msgid "Width for each item"
@@ -156,7 +157,8 @@ msgstr "Columna d'etiquetatge"
 
 #: ../exo/exo-icon-view.c:717
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Columna del model d'on obtenir el text si es fa servir el marcatge Pango"
+msgstr ""
+"Columna del model d'on obtenir el text si es fa servir el marcatge Pango"
 
 #: ../exo/exo-icon-view.c:731
 msgid "Icon View Model"
@@ -167,7 +169,8 @@ msgid "The model for the icon view"
 msgstr "El model per la vista d'icones"
 
 #: ../exo/exo-icon-view.c:746
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "Posicionament relatiu entre el text i la icona de cada element"
 
 #: ../exo/exo-icon-view.c:778
@@ -203,11 +206,11 @@ msgstr "Mode de selecció"
 msgid "The selection mode"
 msgstr "El mode de selecció"
 
-#: ../exo/exo-icon-view.c:840 ../exo/exo-tree-view.c:155
+#: ../exo/exo-icon-view.c:840 ../exo/exo-tree-view.c:156
 msgid "Single Click"
 msgstr "Clic senzill"
 
-#: ../exo/exo-icon-view.c:841 ../exo/exo-tree-view.c:156
+#: ../exo/exo-icon-view.c:841 ../exo/exo-tree-view.c:157
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Si els elements de la vista poden ser activats amb un sol clic"
 
@@ -670,7 +673,8 @@ msgid "  -h, --help                          Print this help message and exit"
 msgstr "  -h, --help                        Mostra aquest missatge i surt"
 
 #: ../exo-open/main.c:47
-msgid "  -v, --version                       Print version information and exit"
+msgid ""
+"  -v, --version                       Print version information and exit"
 msgstr "  -v, --version                 Mostra la versió i surt"
 
 #: ../exo-open/main.c:49
@@ -741,4 +745,3 @@ msgstr "És impossible llançar l'aplicació predeferida de la categoria \"%s\".
 #, fuzzy, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Fallit a  obre URL."
-
