--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-27  Daichi Kawahata <daichi@xfce.org>
+
+	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
+	  ja.po, libexo-0.3.pot, pt_BR.po: Updated.
+
 2006-03-18  Daichi Kawahata <daichi@xfce.org>
 
 	* LINGUAS, ru.po: Added Russian translations by Andrey Fedoseev
