Added/Updated Russian translations by   Andrey Fedoseev <andrey.fedoseev@gmail.com> and   Sergey Fedoseev <fedoseev.sergey@gmail.com>.
(Old svn revision: 20606)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,8 @@
 2006-03-27  Daichi Kawahata <daichi@xfce.org>
 
+	* ru.po: Updated Russian translations by Andrey Fedoseev
+	  <andrey.fedoseev@gmail.com> and Sergey Fedoseev
+	  <fedoseev.sergey@gmail.com>.
 	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
 	  ja.po, libexo-0.3.pot, pt_BR.po: Updated.
 
