2006-04-01  Stavros Giannouris <stavrosg2002@freemail.gr>
        * el.po: Updated Greek translation by Stathis Kamperis



(Old svn revision: 20672)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-01  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Updated Greek translation by Stathis Kamperis
+
 2006-03-27  Daichi Kawahata <daichi@xfce.org>
 
 	* ru.po: Updated Russian translations by Andrey Fedoseev
