[i18n] catalan little of work on catalan translations
(Old svn revision: 20689)

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-25 08:18+0900\n"
-"PO-Revision-Date: 2006-03-19 17:33+0100\n"
+"PO-Revision-Date: 2006-04-02 17:59+0200\n"
 "Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: Catalan\n"
 "MIME-Version: 1.0\n"
@@ -190,7 +190,6 @@ msgid "Space which is inserted between grid rows"
 msgstr "L'espai inserit entre les files d'una graella"
 
 #: ../exo/exo-icon-view.c:809
-#, fuzzy
 msgid "Search Column"
 msgstr "Cerca columna"
 
@@ -300,7 +299,7 @@ msgstr "No es suporten URL com \"%s\""
 #: ../exo/exo-url.c:377
 #, c-format
 msgid "Failed to open \"%s\"."
-msgstr "És impossible obrir \"%s\"."
+msgstr "No s'ha pogut obrir \"%s\"."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
@@ -469,7 +468,7 @@ msgstr ""
 #: ../exo-helper/exo-helper-chooser-dialog.c:296
 #: ../exo-helper/exo-helper-launcher-dialog.c:260
 msgid "Failed to open the documentation browser."
-msgstr "És impossible obrir el navegador per la documentació"
+msgstr "No s'ha pogut obrir el navegador per la documentació"
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
@@ -486,15 +485,15 @@ msgstr "No s'ha seleccionat cap apliació"
 
 #: ../exo-helper/exo-helper-chooser.c:335
 msgid "Failed to set default Web Browser"
-msgstr "És impossible definir el navegador web predeterminat"
+msgstr "No s'ha pogut definir el navegador web predeterminat"
 
 #: ../exo-helper/exo-helper-chooser.c:336
 msgid "Failed to set default Mail Reader"
-msgstr "És impossible definir el client de correu predeterminat"
+msgstr "No s'ha pogut definir el client de correu predeterminat"
 
 #: ../exo-helper/exo-helper-chooser.c:337
 msgid "Failed to set default Terminal Emulator"
-msgstr "És impossible definir l'emulador de terminal predeterminat"
+msgstr "No s'ha pogut definir l'emulador de terminal predeterminat"
 
 #: ../exo-helper/exo-helper-chooser.c:401
 msgid "Select application"
@@ -582,11 +581,11 @@ msgstr "No heu especificat cap ordre"
 
 #: ../exo-helper/exo-helper.c:675
 msgid "Failed to open helpers.rc for writing"
-msgstr "És impossible obrir helpers.rc per escriptura"
+msgstr "No s'ha pogut obrir helpers.rc per escriptura"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:40
 msgid "Failed to launch exo-preferred-applications"
-msgstr "És impossible llançar apliacions-preferides-exo"
+msgstr "No s'ha pogut llançar apliacions-preferides-exo"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
@@ -739,9 +738,9 @@ msgstr ""
 #: ../exo-open/main.c:121
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr "És impossible llançar l'aplicació predeferida de la categoria \"%s\"."
+msgstr "No s'ha pogut llançar l'aplicació predeferida de la categoria \"%s\"."
 
 #: ../exo-open/main.c:144
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open URL \"%s\"."
-msgstr "Fallit a  obre URL."
+msgstr "No s'ha pogut obrir la URL \"%s\""
