--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-11	Benedikt Meurer <benny@xfce.org>
+
+	* python/: Update the Python bindings, including exo-url, exo-execute
+	  and exo-binding. Update the Python examples.
+
 2006-04-10	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_button_press_event),
