--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-11  Daichi Kawahata <daichi@xfce.org>
+
+	* libexo-0.3.pot, *.po: Updated.
+
 2006-04-01  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Updated Greek translation by Stathis Kamperis
