Updated Finnish translations by Jari Rahkonen <jari.rahkonen@pp1.inet.fi>.
(Old svn revision: 20846)

--- a/po/fi.po
+++ b/po/fi.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-11 20:11+0900\n"
-"PO-Revision-Date: 2006-03-01 21:24+0200\n"
+"PO-Revision-Date: 2006-04-10 23:22+0300\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -210,15 +210,16 @@ msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Voiko näkymän kohteet valita kertanapsautuksilla"
 
 #: ../exo/exo-icon-view.c:871 ../exo/exo-tree-view.c:186
-#, fuzzy
 msgid "Single Click Timeout"
-msgstr "Kertanapsautus"
+msgstr "Kertanapsautusviive"
 
 #: ../exo/exo-icon-view.c:872 ../exo/exo-tree-view.c:187
 msgid ""
 "The amount of time after which the item under the mouse cursor will be "
 "selected automatically in single click mode"
 msgstr ""
+"Viive, jonka jälkeen hiiren osoittimen alla oleva kohde valitaan "
+"automaattisesti kertanapsautustilassa"
 
 #: ../exo/exo-icon-view.c:887
 msgid "Spacing"
