2006-04-14	Benedikt Meurer <benny@xfce.org>
	* exo/exo-icon-view.{c,h}, exo/exo.symbols: Add support for an
	  additional layout mode, which is similar to the list view in Windows
	  Explorer and lays out items in columns instead of rows, based on a
	  patch from Matt McClinch <mattmcclinch@gmail.com>.
	* docs/reference/: Update API docs.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.




(Old svn revision: 20879)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-04-14	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.{c,h}, exo/exo.symbols: Add support for an
+	  additional layout mode, which is similar to the list view in Windows
+	  Explorer and lays out items in columns instead of rows, based on a
+	  patch from Matt McClinch <mattmcclinch@gmail.com>.
+	* docs/reference/: Update API docs.
+	* po/libexo-0.3.pot, po/*.po: Merge new strings.
+
 2006-04-11	Benedikt Meurer <benny@xfce.org>
 
 	* python/pyexo.h: Work-around compile problem when glibc headers are
