--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-14  Daichi Kawahata <daichi@xfce.org>
+
+	* libexo-0.3.pot, *.po: Updated.
+
 2006-04-14  Benedikt Meurer <benny@xfce.org>
 
 	* libexo-0.3.pot, *.po: Merge new strings.
