Updated Finnish translations by Jari Rahkonen <jari.rahkonen@pp1.inet.fi>.
(Old svn revision: 20898)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-04-14  Daichi Kawahata <daichi@xfce.org>
 
+	* fi.po: Updated Finnish translations by Jari Rahkonen
+	  <jari.rahkonen@pp1.inet.fi>.
 	* libexo-0.3.pot, *.po: Updated.
 
 2006-04-14  Benedikt Meurer <benny@xfce.org>
