2006-04-15  Stavros Giannouris <stavrosg2002@freemail.gr>
        * el.po: Updated Greek translation.



(Old svn revision: 20899)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-15  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Updated Greek translation.
+
 2006-04-14  Daichi Kawahata <daichi@xfce.org>
 
 	* fi.po: Updated Finnish translations by Jari Rahkonen
