--- a/po/el.po
+++ b/po/el.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: libexo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-15 08:45+0900\n"
-"PO-Revision-Date: 2006-03-29 22:37+0300\n"
-"Last-Translator: Stathis Kamperis <ekamperi@auth.gr>\n"
+"PO-Revision-Date: 2006-04-14 17:58+0200\n"
+"Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -144,12 +144,11 @@ msgstr "Το πλάτος που χρησιμοποιείται για κάθε 
 
 #: ../exo/exo-icon-view.c:728
 msgid "Layout mode"
-msgstr ""
+msgstr "Διάταξη"
 
 #: ../exo/exo-icon-view.c:729
-#, fuzzy
 msgid "The layout mode"
-msgstr "Η λειτουργία επιλογής"
+msgstr "Η διάταξη της προβολής"
 
 #: ../exo/exo-icon-view.c:745
 msgid "Margin"
@@ -205,7 +204,7 @@ msgstr "Αναζήτηση στήλης"
 
 #: ../exo/exo-icon-view.c:856
 msgid "Model column to search through when searching through item"
-msgstr ""
+msgstr "Μοντέλο στήλης για αναζήτηση όταν γίνεται αναζήτηση μέσω αντικειμένου"
 
 #: ../exo/exo-icon-view.c:870
 msgid "Selection mode"
@@ -224,15 +223,16 @@ msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Εάν θα ενεργοποιούνται τα αντικείμενα στην προβολή με μονά κλικ"
 
 #: ../exo/exo-icon-view.c:903 ../exo/exo-tree-view.c:186
-#, fuzzy
 msgid "Single Click Timeout"
-msgstr "Μονό κλικ"
+msgstr "Λήξη χρονικού ορίου για μονό κλικ"
 
 #: ../exo/exo-icon-view.c:904 ../exo/exo-tree-view.c:187
 msgid ""
 "The amount of time after which the item under the mouse cursor will be "
 "selected automatically in single click mode"
 msgstr ""
+"Ο χρόνος μετά τον οποίο το αντικείμενο κάτω από τον κέρσορα του ποντικιού θα "
+"επιλεγεί αυτόματα στη λειτουργία μονού κλικ"
 
 #: ../exo/exo-icon-view.c:919
 msgid "Spacing"
@@ -617,7 +617,7 @@ msgstr "Τερματικό Xfce"
 
 #: ../exo-helper/helpers/balsa.desktop.in.h:1
 msgid "Balsa"
-msgstr ""
+msgstr "Balsa"
 
 #: ../exo-helper/helpers/debian-sensible-browser.desktop.in.h:1
 msgid "Debian Sensible Browser"
@@ -637,7 +637,7 @@ msgstr "Προσομοίωση τερματικού Enlightenment"
 
 #: ../exo-helper/helpers/evolution.desktop.in.h:1
 msgid "Novell Evolution"
-msgstr ""
+msgstr "Novell Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.h:1
 msgid "Mozilla Firefox"
@@ -665,7 +665,7 @@ msgstr "Περιηγητής διαδικτύου Mozilla"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.h:1
 msgid "Mozilla Mail"
-msgstr ""
+msgstr "Mozilla Mail"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.h:1
 msgid "Opera Browser"
