2006-04-15	Benedikt Meurer <benny@xfce.org>
	* exo/exo-icon-view.c(exo_icon_view_layout_single_col): Apply patch
	  from Matt McClinch <mattmcclinch@gmail.com> to properly use the
	  calculated rowspan.
	* THANKS: Fix "Other contributors" section title.




(Old svn revision: 20901)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-04-15	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(exo_icon_view_layout_single_col): Apply patch
+	  from Matt McClinch <mattmcclinch@gmail.com> to properly use the
+	  calculated rowspan.
+	* THANKS: Fix "Other contributors" section title.
+
 2006-04-14	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c: Allow horizontal scrolling using the regular
