--- a/THANKS
+++ b/THANKS
@@ -44,8 +44,8 @@ Andrey Fedoseev <andrey.fedoseev@gmail.com>
  * ru translations
 
 
-Translators (sorted by name):
------------------------------
+Other contributers (sorted by name):
+------------------------------------
 
 Matt McClinch <mattmcclinch@gmail.com>
  * ExoIconView patches
