Updated Japanese translations.
(Old svn revision: 20907)

--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-15 08:45+0900\n"
-"PO-Revision-Date: 2006-04-11 22:13+0900\n"
+"PO-Revision-Date: 2006-04-15 11:34+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -144,12 +144,11 @@ msgstr "それぞれのアイテムに使用する幅です。"
 
 #: ../exo/exo-icon-view.c:728
 msgid "Layout mode"
-msgstr ""
+msgstr "レイアウトモード"
 
 #: ../exo/exo-icon-view.c:729
-#, fuzzy
 msgid "The layout mode"
-msgstr "選択モードです。"
+msgstr "レイアウトモードです。"
 
 #: ../exo/exo-icon-view.c:745
 msgid "Margin"
