--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-04-15  Daichi Kawahata <daichi@xfce.org>
 
+	* ru.po: Updated Russian translations by Andrey Fedoseev
+	  <andrey.fedoseev@gmail.com>.
 	* ja.po: Updated Japanese translations.
 
 2006-04-15  Stavros Giannouris <stavrosg2002@freemail.gr>
