--- a/po/ca.po
+++ b/po/ca.po
@@ -6,7 +6,7 @@
 # This file is distributed under the same license as the exo package.
 msgid ""
 msgstr ""
-"Project-Id-Version: ca\n"
+"Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-15 08:45+0900\n"
 "PO-Revision-Date: 2006-04-02 17:59+0200\n"
