--- a/po/hu.po
+++ b/po/hu.po
@@ -1,11 +1,11 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-15 08:45+0900\n"
 "PO-Revision-Date: 2006-04-14 20:54+0100\n"
 "Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
-"Language-Team:  <hu>\n"
+"Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
